syntax = "proto3";
package operation_pb;
option go_package="models/operation_pb";

message SumRequest {
    int64 first_number = 1;
    int64 second_number = 2;
}

message SumResponse {
    int64 sum_result = 1;
}

message PrimeFactorsRequest {
    int64 number = 1;
}

message PrimeFactorsResponse {
    int64 number = 1;
}

message ComputeAverageRequest  {
    int64 number = 1;
}

message ComputeAverageResponse  {
    double average = 1;
}

message FloorCeilingRequest {
    double number = 1;
}

message FloorCeilingResponse {
    double floor_value = 1;
    double ceiling_value = 2;
}

message SquareRootRequest {
    double number = 1;
}

message SquareRootResponse {
    double root = 1;
}

message PowerRequest {
    double base = 1;
    double exponent = 2;
}

message PowerResponse {
    double result = 1;
}

service OperationService {
    // Unary service
    rpc Sum (SumRequest) returns (SumResponse) {};
    // Server streaming service
    rpc PrimeFactors (PrimeFactorsRequest) returns (stream PrimeFactorsResponse) {};
    // Client streaming service
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    // Bi-di streaming service
    rpc FloorCeiling (stream FloorCeilingRequest) returns (stream FloorCeilingResponse) {};
    // Unary service with error handling
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
    // Unary service with deadline
    rpc Power (PowerRequest) returns (PowerResponse) {};
}